<resources>
    <string name="app_name">Bullseye</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_target">TargetActivity</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="title_activity_create_activity">CreateActivityActivity</string>
    <string name="create_activity">Create a new activity:</string>
    <string name="activity_name">Activity Name:</string>
    <string name="dot_dot_dot">...</string>
    <string name="target">Target:</string>
    <string name="units">Units:</string>
    <string name="genre">Genre:</string>
    <string name="base_target">Base Target:</string>
    <string name="stretch_target">Stretch Target:</string>
    <string name="create">Create</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="create_group">Create a new group:</string>
    <string name="group_name">Group Name:</string>
    <string name="activity">Activity:</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Your Profile:</string>
    <string name="profile_picture">User profile picture.</string>
    <string name="change_picture">Edit Photo</string>
    <string name="name">Name:</string>
    <string name="delete">Delete Account</string>
    <string name="save">Save</string>
    <string name="birth">Date of Birth</string>
    <string name="new_date_button">Pick a Date...</string>
    <string name="badges">Badges:</string>
    <string name="community_activity_join">Join</string>
    <string name="default_progress_ammount">0</string>
    <string name="update_progress">Update</string>
    <string name="update_text">Add your progress here:</string>
    <string name="edit_text_progress">Edit your target.</string>
    <string name="cancel">Cancel</string>
    <string name="createActivity">Create and Join an Activity</string>
    <string name="my_activities_add_group">Create a Group</string>
    <string name="add_member">Add User</string>
    <string name="leave_group">Leave Group</string>

</resources>
