<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/group_name" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dot_dot_dot"
                    android:layout_weight="4"
                    android:id="@+id/group_name"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_name"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/base_target"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dot_dot_dot"
                    android:layout_weight="4"
                    android:id="@+id/edit_base_target"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stretch_target"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dot_dot_dot"
                    android:layout_weight="4"
                    android:id="@+id/edit_stretch_target"
                    android:inputType="number"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>